# projectly

./: LICENSE  README.md  openapi-schema.yaml  pyproject.toml  requirements.txt
projectly/: asgi.py  settings.py  urls.py  wsgi.py
projects/: admin.py  calendar_views.py  models.py  note_views.py  projects_views.py  scripts_views.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_calendar.py
