[project]
name = "projectly"
version = "0.1"
description = "Django project to manage projects"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Adam Jefferiss"}]
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT"
]
dependencies = [
    "Django>=5.0.6"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/ajefferiss/projectly"

[project.optional-dependencies]
test ["pytest", "mkdocs"]
